# ChangeLog for sci-mathematics/why
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jun 2014; Jonathan-Christofer Demay <jcdemay@gmail.com>
  -why-2.30.ebuild, -files/why-2.30.patch, +why-2.34.ebuild, +why-flocq23.patch:
  version bump

  03 Mar 2013; Justin Lecher <jlec@gentoo.org>
  why-2.30.ebuild, metadata.xml:
  Drop ppc as deps are not keyworded; move to EAPI=5 and autotools-utils.eclass

  21 Dec 2011; Jonathan-Christofer Demay <jcdemay@gmail.com>
  -why-2.29.ebuild, -files/why_jessie-carbon.patch, +why-2.30.ebuild, +files/why-2.30.patch:
  version bump

  06 May 2011; Jonathan-Christofer Demay <jcdemay@gmail.com>
  -why-2.28.ebuild, +why-2.29.ebuild:
  version bump

  14 Feb 2011; Jonathan-Christofer Demay <jcdemay@gmail.com>
  -why-2.26.ebuild, +why-2.28.ebuild, +files/why_jessie-carbon.patch:
  version bump

  11 Jul 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  why-2.26.ebuild:
  Silenced repoman; dropped ~sparc since dependencies cannot be fulfilled.

  08 Jul 2010; Jonathan-Christofer Demay <jcdemay@gmail.com>
  -why-2.19.ebuild, +why-2.26.ebuild:
  version Bump

  08 Jul 2010; Jonathan-Christofer Demay <jcdemay@gmail.com>
  +ChangeLog, +metadata.xml:
  QA fixes
